--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,7 +21,7 @@
                 <strong>RUNNERS</strong>
               </em>
             </h1>
-          </div> 
+          </div>
           <div class="nav-item col-md-4">
             <ul class="nav justify-content-around col-md-12 ">
               <li class="m-2">
@@ -90,7 +90,7 @@
                         data-bs-toggle="dropdown">
                     Sobre mi
                   </label>
-                  <ul class="dropdown-menu dropdown-menu-start" 
+                  <ul class="dropdown-menu dropdown-menu-start"
                     aria-labelledby="dropdownMenuButton3">
                     <li>
                       <h6>
@@ -103,7 +103,9 @@
                     </li>
                     <li><br></li>
                     <li>
-                      <a href="https://github.com/JorgeAgulloM">
+                      <a href="https://github.com/JorgeAgulloM"
+                      target="blank"
+                      style="text-decoration: none;">
                         Mi GitHub
                       </a>
                     </li>
@@ -113,10 +115,10 @@
             </ul>
           </div>
           <div class="nav-item col-md-4 align-self-center">
-            <div class="nav justify-content-end" 
-                *ngIf="this.getIsUserLogIn()" 
-                data-bs-toggle="tooltip" 
-                data-bs-placement="left" 
+            <div class="nav justify-content-end"
+                *ngIf="this.getIsUserLogIn()"
+                data-bs-toggle="tooltip"
+                data-bs-placement="left"
                 title="Pulsa para cerrar sesión">
               <button type="button"
                     class="btn btn-warning me-2"
@@ -133,7 +135,7 @@
           <div class="col-8 col-sm-4 d-flex justify-content-center align-items-center">
             <div class="card rounded shadow-lg p-2"
                 style="width: 36rem; height: 49rem;">
-                
+
                 <div class="col-md-12 p-2">
                   <label class="form-control bg-primary text-white">Ficha de datos del usuario</label>
                 </div>
